	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk


# (r1068)
 * "limit '~i' MINIDX[-MAXIDX]", with MINIDX and MAXIDX numbers (eventually with K as x 1000 multiplier) will restrict to filenames in positions between those.
# (r1067)
 * "limit '~z' MINSIZE[-MAXSIZE]", with MINSIZE and MAXSIZE numbers with eventually K (x 1024) or M (x 1024 1024) multipliers, will limit according to file size.
 * "limit '~d' MINTIME[-MAXTIME]", with MINTIME and MAXTIME numbers, will limit according to file modify date (expressed as seconds since the epoch, see 'man 2 time').
 * "limit '~d' MINTIME[-MAXTIME]", with MINTIME and MAXTIME numbers, will limit according to file modify date (expressed as seconds since the epoch, see 'man 2 time').
 * "limit '~d' MINDATE[-MINDATE]", with MINDATE and MAXDATE dates as in DD/MM/YYYY, and after 1900.
# (r1065)
 * "limit '-further' ..." will make 'limit' act on the current list, rather than on the full anew. 
# (r1063)
 * Command "list 'mark' {args}" accepts now exactly what "limit {args}" does.
# (r1059)
 * Doc fix: stating that --sanity-check terminates the program, rather than continuing.
# (r1056,r1062)
 * New criteria for the "limit" command:
   If invoked with '~!' will restrict to files with unique basename.
   If with '~=', to files with duplicate basename;
   if with '~^', to the first of the files with duplicate basename;
   if with '~$', to the last of the files with duplicate basename. 
# (r1053)
 * Added variable _all_file_loaders: space-separated list of hardcoded file loaders usable with _file_loader.
# (r1051,r1052)
 * Optional -R/--recursive[=arg] argument, overwrites (if set) or appends to (if beginning with + or |) 
   the "_pushdir_re" variable (recursed filename extensions).
# (r1046)
 * Introduced a "#!fim:+=" special description line to append to cached description.
 * Introduced a "#!fim:^=" special description line to prepend to cached description.
# (r1045)