@@ -6,10 +6,13 @@
 
 # (r1068)
  * "limit '~i' MINIDX[-MAXIDX]", with MINIDX and MAXIDX numbers (eventually with K as x 1000 multiplier) will restrict to filenames in positions between those.
+# (r1070)
+ * "limit '~d'", will limit to files having exact current file's modify date +- one day.
 # (r1067)
+ * "limit '~z'", with, will limit to files having same file size as the current.
  * "limit '~z' MINSIZE[-MAXSIZE]", with MINSIZE and MAXSIZE numbers with eventually K (x 1024) or M (x 1024 1024) multipliers, will limit according to file size.
  * "limit '~d' MINTIME[-MAXTIME]", with MINTIME and MAXTIME numbers, will limit according to file modify date (expressed as seconds since the epoch, see 'man 2 time').
- * "limit '~d' MINTIME[-MAXTIME]", with MINTIME and MAXTIME numbers, will limit according to file modify date (expressed as seconds since the epoch, see 'man 2 time').
+# (r1069)
  * "limit '~d' MINDATE[-MINDATE]", with MINDATE and MAXDATE dates as in DD/MM/YYYY, and after 1900.
 # (r1065)
  * "limit '-further' ..." will make 'limit' act on the current list, rather than on the full anew. 
